react_client/src/components/card/styles/card.css
/* NetFlix Style Slider */
/* npm library: https://www.npmjs.com/package/netslider */

.media-card {
  margin: 0.5rem;
  min-width: 13em;
  max-width: 12%;
  max-height: 24em;
  background-color: var(--off-black);
  border: 2px solid var(--blue-light);
  border-radius: 1rem;
  animation: 1s ease-out 0s 1 slideInFromLeft;
}

.arrow-card {
  width: 3vw;
  height: 30vh;
  position: relative;
  background-color: transparent;
  border: none;
}

.arrow-left,
.arrow-right {
  position: absolute;
  top: 70%;
  transform: translateY(-50%);
  cursor: pointer;
  width: 2.5em;
  height: 2.5em;
}

.arrow-left:hover,
.arrow-right:hover {
  color: var(--grey-light);
}

.arrow-left {
  left: 0;
}

.arrow-right {
  right: 0;
}

.card-img {
  max-width: 75%;
  background-color: var(--grey-light);
  padding: 1.5em;
  margin-top: 1em;
  border-radius: 1em;
  box-shadow: 4px 4px 5px 0px var(--blue-light);
}

.card-body {
  padding-top: 2em;
  margin: 0 auto;

}

.media-row {
  padding: 1rem;
  overflow: scroll;
  position: relative;
  scrollbar-width: none;
}

.media-row::-webkit-scrollbar {
  display: none;
}

@keyframes slideInFromLeft {
  0% {
    transform: translateX(-100%);
  }
  100% {
    transform: translateX(0);
  }
}

/* INNER Card.Text Grid Styles */

.value-type {
  display: inline-grid;
  font-size: 13px;
  text-align: start;
}

.value {
  display: inline-grid;
  font-size: 13px;
  text-align: end;
  width: 7em;
}

.card-text {
  margin: 0;
}

.card-text-body {
  min-width: 8em;
}

.media-card:hover {
  transform: scale(1.05);
  transition: transform 0.5s ease-in-out;
}

